--- a/Mint_console.csproj
+++ b/Mint_console.csproj
@@ -6,6 +6,8 @@
     <Platforms>AnyCPU;x64</Platforms>
     <AssemblyVersion>1.0.0.3</AssemblyVersion>
     <FileVersion>1.0.0.3</FileVersion>
+    <NoWin32Manifest>true</NoWin32Manifest>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
 </Project>
